# indra-cogex-mcp

./: .env.example  .gitignore  .mcp.json  BACKEND_INTEGRATION_ASSESSMENT.md  CURRENT_STATUS.md  HOW_TO_USE.md  IMPLEMENTATION_GUIDE.md  NEO4J_DOCUMENTATION.md  NEO4J_QUICKSTART.md  NEO4J_SCHEMA.md  NEO4J_SCHEMA_ANALYSIS.md  QUICK_START.md  README.md  SETUP.md  SUBAGENT_RESULTS_SUMMARY.md  TESTING.md  TEST_FAILURE_ANALYSIS.md  TEST_STRATEGY_PROBLEMS.md  TOOLS_CATALOG.md  codecov.yml  pyproject.toml  pytest.ini  swagger_spec.json
.github/workflows/: ci.yml
archive/: COMPLETE_COVERAGE_PLAN.md  IMPLEMENTATION_SPEC.md  MCP_BUILDER_ASSESSMENT.md  MISSING_CAPABILITIES.md  PHASE6_COMPLETE.md  PHASE6_PLAN.md
archive/servers/: README.md  server.py.backup_1764079708  server_fastmcp_backup.py  server_lowlevel.py
docs/: GAP_CLOSURE_PLAN.md  subnetwork_extraction_guide.md
evaluation/: README.md  __init__.py  questions.xml  reference_answers.json  runner.py  validator.py
examples/: cell_line_queries.py  cell_marker_queries.py  clinical_trial_queries.py  disease_queries.py  drug_queries.py  literature_queries.py  ontology_queries.py  pathway_queries.py  subnetwork_extraction.py  variant_queries.py
scripts/: run_integration_tests.sh  validate_backend_integration.py  validate_gilda_implementation.py  validate_neo4j_queries.py  validate_subnetwork_integration.py  validate_subnetwork_tests.py
src/cogex_mcp/: __init__.py  config.py  constants.py  schemas.py  schemas_tool10.py  server.py
tests/: __init__.py  test_curie_normalizer.py  test_gilda_client.py
tests/cache/: README.md  __init__.py  conftest.py  test_cache_eviction.py  test_cache_hit_rate.py  test_cache_ttl.py
tests/integration/: MCP_SERVER_TESTS_README.md  README.md  __init__.py  conftest.py  fixtures_known.py  test_backend_clients.py  test_cell_line_integration.py  test_cell_marker_integration.py  test_client_sanity.py  test_clinical_trial_integration.py  test_disease_integration.py  test_drug_integration.py  test_e2e_integration.py  test_e2e_workflows.py  test_entity_resolver_integration.py  test_gilda_integration.py  test_gilda_tool.py  test_literature_integration.py  test_mcp_server.py  test_mcp_server_tools.py  test_ontology_integration.py  test_pathway_integration.py  test_subnetwork_integration.py  test_tool01_gene_integration.py  test_tool01_integration.py  test_tool02_subnetwork_integration.py  test_tool03_enrichment_integration.py  test_tool04_drug_integration.py  test_tool05_disease_integration.py  test_tool06_pathway_integration.py  test_tool07_cell_line_integration.py  test_tool08_clinical_trials_integration.py  test_tool09_literature_integration.py  test_tool10_variants_integration.py  test_tool11_integration.py  test_tool12_integration.py  test_tool13_integration.py  test_tool14_integration.py  test_tool15_integration.py  test_tool16_integration.py  (+4 more)
tests/performance/: README.md  __init__.py  conftest.py  profiler.py  run_performance_tests.py  test_cache_warmup.py  test_concurrency.py  test_connection_pool.py  test_framework_validation.py  test_gilda_performance.py  test_latency_benchmarks.py  verify_framework.py
tests/unit/: test_cell_line_client.py  test_cell_marker_client.py  test_clinical_trial_client.py  test_disease_client.py  test_drug_client.py  test_gilda_cache.py  test_literature_client.py  test_ontology_client.py  test_pathway_client.py  test_server.py  (+2 more)
(+70 files in other folders)
