[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogex-mcp"
version = "1.0.0"
description = "MCP server for INDRA CoGEx biomedical knowledge graph"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    # MCP and core
    "mcp==1.22.0",
    "pydantic==2.12.4",
    "pydantic-settings==2.7.1",

    # Database and HTTP
    "neo4j==6.0.3",
    "httpx==0.28.1",

    # Utilities
    "cachetools==5.5.0",
    "tenacity==9.0.0",  # Retry logic with exponential backoff
    "python-dotenv==1.0.1",  # Environment variable management

    # INDRA CoGEx (from GitHub)
    "indra-cogex @ git+https://github.com/gyorilab/indra_cogex.git@main",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2,<9",
    "pytest-asyncio==0.25.2",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-mock>=3.14.0",

    # Linting and formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-cachetools",

    # Security
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",

    # Build
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
cogex-mcp = "cogex_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # Within except, use raise from - we deliberately wrap exceptions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__
"src/cogex_mcp/server.py" = ["F401"]  # Tool imports are for side-effects (registration)
"tests/**/*.py" = ["F841", "E712", "B007", "C416"]  # Allow test-specific patterns

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "indra_cogex.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "neo4j.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Slow tests that take >5 seconds",
    "cache: Cache effectiveness and performance tests",
]

[tool.coverage.run]
source = ["src/cogex_mcp"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
